# StockClaw

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  README.zh-CN.md
langchain_agent/: .env.example  .gitignore  Makefile  README.md  cli.py  env.template  pyproject.toml
langchain_agent/app/: __init__.py  config.py  context.py  dependencies.py  main.py
langchain_agent/app/agents/: __init__.py  fundamental.py  graph.py  nodes.py  sentiment.py  synthesis.py
langchain_agent/app/api/: auth.py  routes.py  schemas.py
langchain_agent/app/callbacks/: __init__.py  tracing.py
langchain_agent/app/harness/: __init__.py  circuit_breaker.py  compaction.py  context.py  cycle_runtime.py  datasource_config.py  drift_detector.py  llm_config.py  long_term_memory.py  metrics.py  permissions.py  pool_refresh.py  rate_limiter.py  recovery.py  resident_agent.py  resident_product.py  run_journal.py  scheduler.py  task_memory.py  task_spec.py  (+2 more)
langchain_agent/docs/: LANGCHAIN_WORKFLOW.md
langchain_agent/eval/: __init__.py  test_harness.py  test_intent_accuracy.py  test_llm_judge.py  test_new_features.py  test_report_structure.py
langchain_agent/scripts/: warm_demo.py
langchain_agent/tests/: conftest.py  test_agents.py  test_api.py  test_cli.py  test_compaction_validation.py  test_deterministic_checklist.py  test_llm_factory.py  test_peer_comparison.py  test_phase1.py  test_rag.py  test_rate_limiter.py  test_recovery_chain.py  test_resolve_symbol.py  test_response_policy.py  test_risk_metrics.py  test_structured_output.py  test_tools.py  test_validate_result.py
(+136 files in other folders)
