[project]
name = "atlas-langchain-agent"
version = "0.1.0"
description = "LangChain-based fundamental analysis agent for the Atlas stock monitoring platform"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.3",
    "langchain-deepseek>=0.1",
    "langchain-community>=0.3",
    "langchain-chroma>=0.3",
    "langchain-openai>=0.3",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    "yfinance",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "ddgs>=9.0",
    "cryptography>=42.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
openbb = ["openbb==4.5.0"]
zhipu = ["langchain-zhipuai>=0.1"]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
